# artagon-common

./: .artagonrc  .claude  .gitignore  .gitmodules  CHANGELOG.md  README.md  SYMLINKS.md  TESTING.md  codex  licenses
.agents-claude/: preferences.md  project.md
.agents-codex/: project-context.md  project.md
.agents-shared/: CLAUDE.md  agent-manifest.json  preferences.md  project-context.md  project-guidelines.md
.agents/claude/: preferences.md  project-context.md
.agents/codex/: code-patterns.md  preferences.md  project-context.md
.claude/: preferences
.codex/: preferences.md  project-context.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: QUICK-REFERENCE.md  README.md  bazel-ci.yml  cpp-ci.yml  java-build.yml  maven-central-release.yml  maven-ci.yml  maven-deploy.yml  maven-github-release.yml  pr-validation.yml  shellcheck.yml  tests.yml  update-submodule.yml
.github/workflows/examples/: ci.yml  release.yml  snapshot-deploy.yml
codex/: preferences.md  project-context.md  shared
configs/c/: .clang-format  CMakeLists.txt.template
configs/c/.github-workflows-examples/: ci.yml  release.yml
configs/c/bazel/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
configs/cpp/: .clang-format
configs/cpp/.github-workflows-examples/: release.yml
configs/cpp/bazel/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
configs/java/: settings.xml
configs/rust/: .gitignore.template  Cargo.toml.template
docs/: API.md  BAZEL-MIGRATION.md  BRANCH-PROTECTION-USAGE.md  BRANCH-PROTECTION.md  CONTRIBUTING.md  MAVEN_DEPLOYMENT.md  MAVEN_GITHUB-PACKAGES.md  MAVEN_QUICK-RELEASE.md  MAVEN_QUICKSTART-DEPLOY.md  MAVEN_RELEASE_GUIDE.md  MAVEN_SECURITY-SCRIPTS.md  QUICK-RELEASE.md  QUICKSTART-DEPLOY.md  README.md  RELEASE-GUIDE.md  SECURITY-SCRIPTS.md  SEMANTIC-COMMITS.md  TROUBLESHOOTING.md
docs/java/: MAVEN_GITHUB-PACKAGES.md  MAVEN_RELEASE_GUIDE.md
git-hooks/: commit-msg  post-checkout  post-merge  pre-commit
nix/templates/: README.md
nix/templates/c/: flake.nix
nix/templates/cpp/: flake.nix
nix/templates/java/: README.md  flake.nix  shell.nix
nix/templates/rust/: flake.nix
scripts/: README.md  apply_github_configs.sh  artagon  auto_create_and_push.sh  branch-protection-common.sh  check-branch-protection.sh  gh_auto_create_and_push.sh  gh_create_issue_branch.sh  gh_create_pr.sh  gh_setup_contributing.sh  gh_sync_agents.sh  gh_sync_claude.sh  gh_sync_codex.sh  nix_cleanup.sh  nix_install.sh  protect-main-branch-strict.sh  protect-main-branch-team.sh  protect-main-branch.sh  remove-branch-protection.sh  repo_add_artagon_common.sh  repo_setup.sh  repo_validate.sh  setup-artagon-common.sh  setup-repo.sh  sync-codex.sh  verify_agent_layout.sh
scripts/agents/: generate_agent_configs.py
scripts/ci/: branch-protection-common.sh  check-branch-protection.sh  gh_branch_protection_common.sh  gh_check_branch_protection.sh  gh_protect_main.sh  gh_protect_main_strict.sh  gh_protect_main_team.sh  protect-main-branch-strict.sh  protect-main-branch-team.sh  protect-main-branch.sh  remove-branch-protection.sh
scripts/cli/: __init__.py  core.py
scripts/cli/commands/: __init__.py  java.py
scripts/deploy/: check-deploy-ready.sh  deploy-snapshot.sh  mvn_check_ready.sh  mvn_deploy_snapshot.sh  mvn_release.sh  mvn_release_nexus.sh  nexus-release.sh  release.sh
scripts/lib/: common.sh
scripts/security/: generate-dependency-checksums.sh  mvn-update-dep-security.sh  mvn_generate_checksums.sh  mvn_update_security.sh  mvn_verify_checksums.sh  update-dependency-security.sh  verify-checksums.sh
templates/: .gitignore.template  CONTRIBUTING.md.template  README.md  settings.xml
templates/.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
templates/c/: .gitignore.template
templates/c/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
templates/cpp/: .clang-tidy  .gitignore.template  CMakeLists.txt.template
templates/cpp/.github-workflows-examples/: ci.yml
templates/cpp/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
templates/rust/: clippy.toml  rustfmt.toml
templates/rust/.cargo/: config.toml
tests/integration/: run_all_tests.sh  test_agent_layout.sh  test_basic_validation.sh  test_contributing_gen.sh  test_github_configs.sh  test_repo_setup_simple.sh  test_repo_validate_detection.sh
tests/integration/helpers/: test-helpers.sh
tests/python/: test_cli_java.py
tests/shell/: test_gh_sync_agents.sh  test_gh_sync_agents_simple.sh  test_shell_scripts.sh
tools/migrations/: agents-refactor-20251020-063338.json
