# Artagon C++ Project - Bazel Workspace Configuration
# Legacy WORKSPACE file for Bazel <6.0 compatibility
# Consider migrating to MODULE.bazel for Bazel 6.0+

workspace(name = "PROJECT_NAME")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Rules for C/C++
http_archive(
    name = "rules_cc",
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900cdf",
    strip_prefix = "rules_cc-0.0.9",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz"],
)

# Google Test
http_archive(
    name = "com_google_googletest",
    sha256 = "8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7",
    strip_prefix = "googletest-1.14.0",
    urls = ["https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz"],
)

# Abseil
http_archive(
    name = "com_google_absl",
    sha256 = "733726b8c3a6d39a4120d7e45ea8b41a434cdacde401cba500f14236c49b39dc",
    strip_prefix = "abseil-cpp-20240116.1",
    urls = ["https://github.com/abseil/abseil-cpp/archive/refs/tags/20240116.1.tar.gz"],
)

# Google Benchmark (optional)
http_archive(
    name = "com_google_benchmark",
    sha256 = "6bc180a57d23d4d9515519f92b0c83d61b05b5bab188961f36ac7b06b0d9e9ce",
    strip_prefix = "benchmark-1.8.3",
    urls = ["https://github.com/google/benchmark/archive/refs/tags/v1.8.3.tar.gz"],
)

# Meta Folly (C++ components library)
http_archive(
    name = "folly",
    sha256 = "9d308adbb538a9c2fa1bd8c1b6f84e5e7f0de24a079c6e5cc99d1f8e8a6f6b5e",
    strip_prefix = "folly-2024.01.15.00",
    urls = ["https://github.com/facebook/folly/archive/refs/tags/v2024.01.15.00.tar.gz"],
)
