# Artagon C Project - Bazel Workspace Configuration
# Legacy WORKSPACE file for Bazel <6.0 compatibility
# Consider migrating to MODULE.bazel for Bazel 6.0+

workspace(name = "PROJECT_NAME")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Rules for C/C++
http_archive(
    name = "rules_cc",
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900cdf",
    strip_prefix = "rules_cc-0.0.9",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz"],
)

# Google Test
http_archive(
    name = "com_google_googletest",
    sha256 = "8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7",
    strip_prefix = "googletest-1.14.0",
    urls = ["https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz"],
)
